@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
 
+- Ability to do use PropertyIsLike with a column of a different type than text (postgis) (#4176)
+
 - Fixed SLD with FILTER doesn't apply properly to database layers (#4112)
 
 - Fixed lexer buffer size issue with single quotes in a string  (#4175)
